--- a/src/main/resources/templates/organiser/dashboard.html
+++ b/src/main/resources/templates/organiser/dashboard.html
@@ -85,22 +85,22 @@
               </a>
             </li>
 
-            <!-- Layouts -->
+            <!-- Exam -->
             <li class="menu-item">
-                <a href="layouts-without-menu.html" class="menu-link">
+              <a href="javascript:void(0);" class="menu-link menu-toggle">
                 <i class="menu-icon tf-icons bx bx-layout"></i>
                 <div data-i18n="Layouts">Exam</div>
               </a>
 
               <ul class="menu-sub">
                 <li class="menu-item">
-                  <a href="layouts-without-menu.html" class="menu-link">
-                    <div data-i18n="Without menu">Without menu</div>
+                  <a th:href="@{/organiser/exams/create}" class="menu-link">
+                    <div data-i18n="Without menu">Create Exam</div>
                   </a>
                 </li>
                 <li class="menu-item">
                   <a href="layouts-without-navbar.html" class="menu-link">
-                    <div data-i18n="Without navbar">Without navbar</div>
+                    <div data-i18n="Without navbar">List All Exam</div>
                   </a>
                 </li>
                 <li class="menu-item">
@@ -121,6 +121,8 @@
               </ul>
             </li>
 
+
+
             <li class="menu-header small text-uppercase">
               <span class="menu-header-text">Pages</span>
             </li>
@@ -136,13 +138,13 @@
                   </a>
                 </li>
                 <li class="menu-item">
-                  <a href="pages-account-settings-notifications.html" class="menu-link">
+                  <a th:href="@{/organiser/notifications}" class="menu-link">
                     <div data-i18n="Notifications">Notifications</div>
                   </a>
                 </li>
                 <li class="menu-item">
-                  <a href="pages-account-settings-connections.html" class="menu-link">
-                    <div data-i18n="Connections">Connections</div>
+                  <a th:href="@{/organiser/chatwindow}" class="menu-link">
+                    <div data-i18n="Connections">Chat</div>
                   </a>
                 </li>
               </ul>
@@ -250,7 +252,7 @@
                 <li class="nav-item navbar-dropdown dropdown-user dropdown">
                   <a class="nav-link dropdown-toggle hide-arrow" href="javascript:void(0);" data-bs-toggle="dropdown">
                     <div class="avatar avatar-online">
-                      <img th:src="@{/image/{id}(id=${id})}" alt class="w-px-40 h-auto rounded-circle" />
+                      <img th:src="@{/image/{id}(id=${id})}" alt class="rounded-circle" />
                     </div>
                   </a>
                   <ul class="dropdown-menu dropdown-menu-end">
@@ -259,7 +261,7 @@
                         <div class="d-flex">
                           <div class="flex-shrink-0 me-3">
                             <div class="avatar avatar-online">
-                              <img  th:src="@{/image/{id}(id=${id})}"  alt class="w-px-40 h-auto rounded-circle" />
+                              <img  th:src="@{/image/{id}(id=${id})}"  alt class="rounded-circle" />
                             </div>
                           </div>
                           <div class="flex-grow-1">
@@ -319,7 +321,7 @@
                             Please Click on <span class="fw-bold">Exam</span> for creating a new Exam
                           </p>
 
-                          <a href="javascript:;" class="btn btn-sm btn-outline-primary">Create Exam</a>
+                          <a th:href="@{/organiser/exam/create}" class="btn btn-sm btn-outline-primary">Create Exam</a>
                         </div>
                       </div>
                       <div class="col-sm-5 text-center text-sm-left">
@@ -360,11 +362,10 @@
                               </button>
                               <div class="dropdown-menu dropdown-menu-end" aria-labelledby="cardOpt4">
                                 <a class="dropdown-item" href="javascript:void(0);">View More</a>
-                                <a class="dropdown-item" href="javascript:void(0);">Delete</a>
                               </div>
                             </div>
                           </div>
-                          <span class="d-block mb-1">Total Exam</span>
+                          <span class="d-block mb-1">Total Exams</span>
                           <h3 class="card-title text-nowrap mb-2">0</h3>
 <!--                          <small class="text-danger fw-semibold"><i class="bx bx-down-arrow-alt"></i> -14.82%</small>-->
                         </div>
@@ -390,11 +391,10 @@
                               </button>
                               <div class="dropdown-menu" aria-labelledby="cardOpt1">
                                 <a class="dropdown-item" href="javascript:void(0);">View More</a>
-                                <a class="dropdown-item" href="javascript:void(0);">Delete</a>
                               </div>
                             </div>
                           </div>
-                          <span class="fw-semibold d-block mb-1">Create Exam</span>
+                          <span class="fw-semibold d-block mb-1">Active Exams</span>
                           <h3 class="card-title mb-2">0</h3>
 <!--                          <small class="text-success fw-semibold"><i class="bx bx-up-arrow-alt"></i> +28.14%</small>-->
                         </div>
