--- a/src/main/resources/templates/organiser/exam/list-exam.html
+++ b/src/main/resources/templates/organiser/exam/list-exam.html
@@ -281,7 +281,7 @@
                             <a class="nav-link dropdown-toggle hide-arrow" href="javascript:void(0);"
                                data-bs-toggle="dropdown">
                                 <div class="avatar avatar-online">
-                                    <img th:src="@{/image/{id}(id=${id})}" alt class="rounded-circle"/>
+                                    <img th:src="@{organiser/image/{id}(id=${id})}" alt class="rounded-circle"/>
                                 </div>
                             </a>
                             <ul class="dropdown-menu dropdown-menu-end">
@@ -366,7 +366,7 @@
                         <div>
                             <!-- Responsive Table -->
                             <div class="card">
-                                <h5 class="card-header">Responsive Table</h5>
+                                <h5 class="card-header">List Exam</h5>
                                 <div class="table-responsive text-nowrap">
                                     <table class="table text-center">
                                         <thead class="table-light">
