--- a/src/main/resources/templates/organiser/dashboard.html
+++ b/src/main/resources/templates/organiser/dashboard.html
@@ -79,7 +79,7 @@
           <ul class="menu-inner py-1">
             <!-- Dashboard -->
             <li class="menu-item active">
-              <a href="index.html" class="menu-link">
+              <a th:href="@{/organiser/dashboard}" class="menu-link">
                 <i class="menu-icon tf-icons bx bx-home-circle"></i>
                 <div data-i18n="Analytics">Dashboard</div>
               </a>
@@ -99,25 +99,12 @@
                   </a>
                 </li>
                 <li class="menu-item">
-                  <a href="layouts-without-navbar.html" class="menu-link">
+                  <a th:href="@{/organiser/exams}" class="menu-link">
                     <div data-i18n="Without navbar">List All Exam</div>
                   </a>
                 </li>
-                <li class="menu-item">
-                  <a href="layouts-container.html" class="menu-link">
-                    <div data-i18n="Container">Container</div>
-                  </a>
-                </li>
-                <li class="menu-item">
-                  <a href="layouts-fluid.html" class="menu-link">
-                    <div data-i18n="Fluid">Fluid</div>
-                  </a>
-                </li>
-                <li class="menu-item">
-                  <a href="layouts-blank.html" class="menu-link">
-                    <div data-i18n="Blank">Blank</div>
-                  </a>
-                </li>
+
+
               </ul>
             </li>
 
@@ -155,10 +142,6 @@
                 <div data-i18n="Authentications">Authentications</div>
               </a>
               <ul class="menu-sub">
-                  <a th:href="@{/organiser/login}" class="menu-link" target="_blank">
-                    <div data-i18n="Basic">Login</div>
-                  </a>
-                </li>
                 <li class="menu-item">
                   <a th:href="@{/organiser/register}" class="menu-link" target="_blank">
                     <div data-i18n="Basic">Register</div>
@@ -204,7 +187,7 @@
             </li>
             <li class="menu-item">
               <a
-                href="https://themeselection.com/demo/sneat-bootstrap-html-admin-template/documentation/"
+                href="#"
                 target="_blank"
                 class="menu-link"
               >
@@ -316,9 +299,9 @@
                     <div class="d-flex align-items-end row">
                       <div class="col-sm-7">
                         <div class="card-body">
-                          <h5 class="card-title text-primary">Welcome Organiser! 🎉</h5>
+                          <h5 class="card-title text-primary">Welcome <span th:text="${name}"></span>! 🎉</h5>
                           <p class="mb-4">
-                            Please Click on <span class="fw-bold">Exam</span> for creating a new Exam
+                            Please Click on <span class="fw-bold">Exam</span> for creating a new exam.
                           </p>
 
                           <a th:href="@{/organiser/exams/create}" class="btn btn-sm btn-outline-primary">Create Exam</a>
@@ -422,7 +405,7 @@
                     document.write(new Date().getFullYear());
                   </script>
                   , made with ❤️ by
-                  <a href="https://themeselection.com" target="_blank" class="footer-link fw-bolder">TestMate Team</a>
+                  <a href="#" target="_blank" class="footer-link fw-bolder">TestMate Team</a>
                 </div>
               </div>
             </footer>
