--- a/src/main/resources/templates/organiser/notifications.html
+++ b/src/main/resources/templates/organiser/notifications.html
@@ -72,7 +72,7 @@
     <!--! Template customizer & Theme config files MUST be included after core stylesheets and helpers.js in the <head> section -->
     <!--? Config:  Mandatory theme config file contain global vars & default theme options, Set your preferred theme option in this file.  -->
     <script src="../assets/js/config.js"></script>
-    </hekad>
+    </head>
 
 <body>
 <!-- Layout wrapper -->
@@ -122,21 +122,7 @@
                                 <div data-i18n="Without navbar">List All Exam</div>
                             </a>
                         </li>
-                        <li class="menu-item">
-                            <a href="layouts-container.html" class="menu-link">
-                                <div data-i18n="Container">Container</div>
-                            </a>
-                        </li>
-                        <li class="menu-item">
-                            <a href="layouts-fluid.html" class="menu-link">
-                                <div data-i18n="Fluid">Fluid</div>
-                            </a>
-                        </li>
-                        <li class="menu-item">
-                            <a href="layouts-blank.html" class="menu-link">
-                                <div data-i18n="Blank">Blank</div>
-                            </a>
-                        </li>
+
                     </ul>
                 </li>
 
