--- a/src/main/resources/templates/organiser/register.html
+++ b/src/main/resources/templates/organiser/register.html
@@ -78,7 +78,7 @@
             <div class="card-body">
               <!-- Logo -->
               <div class="app-brand justify-content-center">
-                <a href="index.html" class="app-brand-link gap-2">
+                <a th:href="@{/}" class="app-brand-link gap-2">
                   <span class="app-brand-logo demo">
                   <img th:src="@{../assets/img/favicon/favicon.ico}" alt="logo">
                   </span>
