--- a/src/main/resources/templates/testmate-homepage/about.html
+++ b/src/main/resources/templates/testmate-homepage/about.html
@@ -181,7 +181,7 @@
               </h4>
               <ul class="  ">
                 <li class=" ">
-                  <a class="" href="index.html">Home <span class="sr-only">(current)</span></a>
+                  <a class="" th:href="@{/}">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="active">
                   <a class="" href="about.html"> About</a>
