--- a/src/main/resources/templates/testmate-homepage/index.html
+++ b/src/main/resources/templates/testmate-homepage/index.html
@@ -27,7 +27,6 @@
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" th:href="@{/testmate-homecss/css/bootstrap.css}" />
-
   <!-- fonts style -->
   <link href="https://fonts.googleapis.com/css?family=Poppins:400,600,700&display=swap" rel="stylesheet">
   <!-- Custom styles for this template -->
@@ -165,7 +164,8 @@
           Meet The Team
         </h2>
         <p>
-          consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          Welcome to ExamPortal, the ultimate online platform for test preparation! At ExamPortal, we understand the importance of having a dedicated and skilled team
+          behind a successful website and app. Allow us to introduce you to the talented individuals who make up our TestMate team, the driving force behind our platform's excellence.
         </p>
       </div>
     </div>
@@ -179,8 +179,8 @@
             Utkarsh Yadav
           </h5>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore
+            Utkarsh is the visionary behind ExamPortal. With his passion for education and technology, he established ExamPortal to revolutionize the way students prepare for exams.
+            Utkarsh's leadership and strategic expertise have guided the team to develop innovative solutions for test preparation. He also manages the backend of of
           </p>
           <div class="social_box">
             <a href=" https://github.com/Rytnix">
@@ -204,8 +204,9 @@
             Gaurav Mishra
           </h5>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore
+            Gaurav is a creative genius behind the appealing design of our website and app. With his expertise in user experience (UX) and user interface (UI) design,
+            Gaurav ensures that our platform is visually engaging, intuitive, and easy to navigate.
+            He focuses on creating a seamless user journey, making studying on ExamPortal an enjoyable experience.
           </p>
           <div class="social_box">
             <a href="https://github.com/gaurav-9648">
@@ -229,8 +230,9 @@
             Atif
           </h5>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore
+            Atif plays a critical role in ensuring the quality and reliability of ExamPortal's features and functionalities.
+            He conducts rigorous testing and debugging to identify and fix any potential issues, ensuring that our platform operates flawlessly.
+            Atif dedication to maintaining a high standard of quality guarantees a seamless learning experience for our users.
           </p>
           <div class="social_box">
             <a href="https://github.com/atifameer786">
@@ -316,7 +318,7 @@
               </h4>
               <ul class="  ">
                 <li class=" active">
-                  <a class="" href="index.html">Home <span class="sr-only">(current)</span></a>
+                  <a class="" th:href="@{/}">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="">
                   <a class="" href="about.html"> About</a>
