--- a/src/main/resources/templates/organiser/chat.html
+++ b/src/main/resources/templates/organiser/chat.html
@@ -110,7 +110,7 @@
 
         <aside id="layout-menu" class="layout-menu menu-vertical menu bg-menu-theme">
             <div class="app-brand demo">
-                <a href="index.html" class="app-brand-link">
+                <a th:href="@{/}" class="app-brand-link">
               <span class="app-brand-logo demo">
                   <img th:src="@{../assets/img/favicon/favicon.ico}" alt="logo">
               </span>
@@ -384,7 +384,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="container" style="height: 50%;width: 80%">
-                                                        <div data-type="youtube" data-video-id="vgTmjNEBr4g" ></div>
+                                                        <div data-type="youtube" data-video-id="1Q9uqFr2Tws" ></div>
                                                     </div>
                                                 </div>
 
