--- a/src/main/resources/templates/organiser/exam/view-exam.html
+++ b/src/main/resources/templates/organiser/exam/view-exam.html
@@ -123,7 +123,7 @@
 
         <aside id="layout-menu" class="layout-menu menu-vertical menu bg-menu-theme">
             <div class="app-brand demo">
-                <a href="index.html" class="app-brand-link">
+                <a th:href="@{/}" class="app-brand-link">
               <span class="app-brand-logo demo">
                   <img th:src="@{../../assets/img/favicon/favicon.ico}" alt="logo">
               </span>
